lib/tests/fixtures/compiler/parser/ineffective_postfix.baseline
Error: ineffective_postfix.pp:1:1: ineffective statements may only appear as the last statement at top-level or inside functions and conditional expressions.
  foo.each |$x| {}[0]
  ^~~~~~~~~~~~~~~~~~~
