lib/tests/fixtures/compiler/parser/ineffective_postfix.pp
foo.each |$x| {}[0]
notice last
